--- a/writeup/luna_replication_report.qmd
+++ b/writeup/luna_replication_report.qmd
@@ -222,7 +222,7 @@ Our replication of Experiment 1 will closely mirror the original study’s 2x2 f
 library(tidyverse)
 
 # Define the directory containing your CSV files
-directory_path <- "../data/osfstorage-archive"
+directory_path <- "../data/pilotB"
 
 # Initialize an empty tibble to store all cleaned data
 cleaned_data <- tibble()
@@ -274,7 +274,7 @@ for (file in file_list) {
 print(cleaned_data)
 
 # Define the output path for the final cleaned CSV file
-output_path <- "../data/cleaned_data.csv"
+output_path <- "../data/cleaned_data_pilotB.csv"
 
 # Save the final combined cleaned_data tibble as a CSV file
 write_csv(cleaned_data, output_path)
