--- a/writeup/writeup_erika_garzaelorduy.qmd
+++ b/writeup/writeup_erika_garzaelorduy.qmd
@@ -1,3 +1,8 @@
+```{r setup, include=FALSE}
+# Define the date
+date_format <- format(Sys.time(), '%B %d, %Y')
+```
+
 ---
 title: "Replication of Study How Quick Decisions Illuminate Moral Character by Clayton R. Critcher, Yoel Inbar and David A. Pizarro (2013, Social Psychological and Personality Science)"
 author: "Erika Garza-Elorduy (egarzaelorduy@ucsd.edu)"
@@ -230,43 +235,57 @@ While other methods, such as a linear mixed-effects model, could offer flexibili
 
 
 ```{R}
-
 library(tidyverse)
 library(dplyr)
 library(car)
 library(emmeans)
 
-dat <- read.csv("../data/cleaned_data_pilotB.csv")
 
+# Load the dataset
+dat <- read.csv("../data/cleaned_data_pilotB.csv")  # Read the dataset into a data frame
+
+# Count how many participants had missing data
+participants_with_missing <- sum(rowSums(is.na(dat)) > 0)  # Count rows with at least one NA value
+
+# Drop rows with missing values
+cleaned_data <- dat %>%
+  filter(complete.cases(.))  # Retain only rows without missing values
+
+# Calculate average scores for Justin and Nate's responses
 avg_score <- dat %>% 
   mutate(
+    # Calculate the average score for Justin across selected questions
     j_avg_score = rowMeans(select(., Justin_response_Q2, Justin_response_Q3, Justin_response_Q4)),
+    # Calculate the average score for Nate across selected questions
     n_avg_score = rowMeans(select(., Nate_response_Q2, Nate_response_Q3, Nate_response_Q4))
   )
 
+# Group data by condition and calculate the mean scores for Justin and Nate
 grouped_data <- avg_score %>%
-  group_by(condition) %>%
+  group_by(condition) %>%  # Group data by the 'condition' column
   summarize(
-    mean_justin = mean(j_avg_score, na.rm = TRUE),
-    mean_nate = mean(n_avg_score, na.rm = TRUE)
+    mean_justin = mean(j_avg_score, na.rm = TRUE),  # Mean of Justin's average scores
+    mean_nate = mean(n_avg_score, na.rm = TRUE)     # Mean of Nate's average scores
   )
 
+# Prepare data for ANOVA analysis
 anova_data <- avg_score %>%
   pivot_longer(
-    cols = c(j_avg_score, n_avg_score),           # Columns to pivot (Justin's and Nate's scores)
-    names_to = "justin_fast_nate_slow",                  # New column to indicate source (Justin or Nate)
-    values_to = "score"                   # New column for the score values
+    cols = c(j_avg_score, n_avg_score),  # Pivot Justin's and Nate's average scores into long format
+    names_to = "justin_fast_nate_slow", # New column to indicate score type (Justin or Nate)
+    values_to = "score"                 # New column for the score values
   )
 
+# Perform a two-way ANOVA
 anova_result <- aov(score ~ condition * justin_fast_nate_slow, data = anova_data)
-summary(anova_result)
+summary(anova_result)  # Display ANOVA results
 
+# Conduct post hoc pairwise comparisons using estimated marginal means
 emmeans(anova_result, pairwise ~ condition * justin_fast_nate_slow)
 ```
-
 ### Exploratory analyses
 
-After having perfomed our planned analysis we intend to do a comparative analysis with the data obtained from an associated graduate student group who is replicating the same experiment. The data they collect will undergo the same statistical tests as in our replication and the obtained results will be compared with our own replication through descriptive statistics and independent sample t-tests terms of how decision speed influences moral evaluations in both data.
+Any follow-up analyses desired (not required).
 
 ## Discussion
 
